--- a/app/src/main/res/layout/content_settings.xml
+++ b/app/src/main/res/layout/content_settings.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.tylorlilley.kbrandomizer3.SettingsActivity">
+    tools:context="kbrandomizer3.SettingsActivity">
 
     <ScrollView
         android:id="@+id/scrollView2"
